--- a/publications.html
+++ b/publications.html
@@ -130,7 +130,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/5.png" height="15"><img src="images/9.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/6.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -220,17 +220,6 @@
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Deep Multimodal Biomechanical Analysis for Lower Back Pain Rehabilitation to Improve Patients Stability.</i> Ashraf, A., Wu, Y., Najam, S., Alshehri, M., Alqahtani, Y., Aljuaid, H., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Bioengineering and Biotechnology, 13:1631910. ISSN: 2296-4185.<br>
-		<a href="https://scholar.google.com/scholar?q=Deep+Multimodal+Biomechanical+Analysis+for+Lower+Back+Pain+Rehabilitation+to+Improve+Patients+Stability" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1631910/abstract" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1631910" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1631910</a>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		-->
-	</td></tr>
-	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>SiWformer: Multi-Scale Feature Fusion via Discrete Wavelet Transformand Vision Transformer.</i> Ahmed, M. W., Wu, Y., Almujally, N. A., Alhasson, H. F., Alharbi, S. S., Jalal, A.*, and Liu, H.* (co-first) (2025). Signal, Image and Video Processing. Springer Nature. ISSN: 1863-1711.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -240,12 +229,47 @@
 		-->
 	</td></tr>
 	<tr><td>
-		<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Transformer-Driven Multimodal for Human-Object Detection and Recognition for Intelligent Robotic Surveillance.</i> Ullah, A. A., Wu, Y., Najam S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 		<!--
+			<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Machine Learning-Assisted Parametric Analysis and Multi-Criteria Optimization of Building Performance: A Case Study on Indoor Environmental Quality and Energy Efficiency.</i> Liu, H.*, Wu, Y., Xue, T., Du, Zhe., Xu, J.*, Jiang, T.* (2025). Energy Conversion and Management. Elsevier. ISSN: 0196-8904.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</td></tr>
+	<tr><td>
+		<i>Deep Multimodal Biomechanical Analysis for Lower Back Pain Rehabilitation to Improve Patients Stability.</i> Ashraf, A., Wu, Y., Najam, S., Alshehri, M., Alqahtani, Y., Aljuaid, H., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Bioengineering and Biotechnology, 13:1631910. ISSN: 2296-4185.<br>
+		<a href="https://scholar.google.com/scholar?q=Deep+Multimodal+Biomechanical+Analysis+for+Lower+Back+Pain+Rehabilitation+to+Improve+Patients+Stability" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Deep-multimodal-biomechanical-analysis-for-lower-to-Ashraf-Wu/524d5e34b8edb8770d3b52405c88c4ca9fc77bb2" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/397380281_Deep_multimodal_biomechanical_analysis_for_lower_back_pain_rehabilitation_to_improve_patients_stability" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1631910/abstract" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1631910" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1631910</a>
+	</td></tr>
+	<tr><td>
+		<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 		<a href="https://scholar.google.com/scholar?q=Aerial+Images+for+Intelligent+Vehicle+Detection+and+Classification+via+YOLOv11+and+Deep+Learner" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-			-->
-		<a href="https://www.semanticscholar.org/paper/Aerial-Images-for-Intelligent-Vehicle-Detection-and-Mujtaba-Liu/331f9796928eb3093f64ec5622ef3c1d06af89d4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Aerial-Images-for-Intelligent-Vehicle-Detection-and-Mujtaba-Liu/331f9796928eb3093f64ec5622ef3c1d06af89d4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/396723505_Aerial_Images_for_Intelligent_Vehicle_Detection_and_Classification_via_YOLOv11_and_Deep_Learner" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/online/detail/24640" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.067895" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.067895</a>
@@ -641,7 +665,7 @@
 
 	<tr><td>
 		<img src="images/Conference.png" height="15">&nbsp;&nbsp;
-		<img src="images/3.png" height="15"><img src="images/1.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/3.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
 	</td></tr>
@@ -649,6 +673,28 @@
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>A Hierarchical Model for Digital Twin Enabled Human-Robot Collaboration in Industrial Assembly.</i> Xia, G., Ghrairi, Z.,  Heuermann, A., Thoben, K-D., Liu, W., Wu, Y., and Liu, H. (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Anomaly Discrimination Technique Combining Small Sample Reliability Improvement and Combination Strategy Optimization.</i> Liu, H.*, Liu, W., Zhang, S., Wu, Y., Shi, J., Li, H., Dai, Q., Wang, K. (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>An Improved Defect Detection System for Substation Equipment Based on Lightweight YOLOv5.</i> Liu, W., Zhang, S., Wu, Y., Shi, J., li, H., Dai, Q., Wang, K., Liu, H.* (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
