--- a/research.html
+++ b/research.html
@@ -102,7 +102,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (104)</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (105)</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -215,7 +215,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/6.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/6.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -344,11 +344,19 @@
 					-->
 				</td></tr>
 				<tr><td>
+					<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alhasson, H. F., Alharbi, S. S., Aljuaid, H., Jalal, A.*, Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<a href="https://scholar.google.com/scholar?q=Dynamic+graph+neural+networks+for+UAV-based+group+activity+recognition+in+structured+team+sports" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395377468_Dynamic_graph_neural_networks_for_UAV-based_group_activity_recognition_in_structured_team_sports" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Dynamic-graph-neural-networks-for-UAV-based-group-Zahra-Wu/ab39587e4ea2d831abb3d923fe59e91f6758c6b7" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1631998</a>
+				</td></tr>
+				<tr><td>
 					<i>Deep Multimodal Biomechanical Analysis for Lower Back Pain Rehabilitation to Improve Patients Stability.</i> Ashraf, A., Wu, Y., Najam, S., Alshehri, M., Alqahtani, Y., Aljuaid, H., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Bioengineering and Biotechnology, 13:1631910. ISSN: 2296-4185.<br>
 					<a href="https://scholar.google.com/scholar?q=Deep+Multimodal+Biomechanical+Analysis+for+Lower+Back+Pain+Rehabilitation+to+Improve+Patients+Stability" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Deep-multimodal-biomechanical-analysis-for-lower-to-Ashraf-Wu/524d5e34b8edb8770d3b52405c88c4ca9fc77bb2" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/397380281_Deep_multimodal_biomechanical_analysis_for_lower_back_pain_rehabilitation_to_improve_patients_stability" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1631910/abstract" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1631910" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1631910" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1631910</a>
 				</td></tr>
 				<tr><td>
