--- a/researchcn.html
+++ b/researchcn.html
@@ -217,7 +217,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/6.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/6.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -327,7 +327,7 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer Modeling in Engineering & Sciences. Tech Science Press. ISSN: 1526-1492.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
