--- a/research.html
+++ b/research.html
@@ -1183,7 +1183,7 @@
 						– 4<sup>th</sup> International Symposium on Clinical Medicine and Intelligent DevicesHeidelberg, Germany 2025: <i>Wearable Medical AI</i><br>
 						&#9679; <a href="https://www.artinhci.com/KeynoteSpeakers.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025
 						– 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Nanning, China 2025: <i>Human-Triggered Machine Learning (HTML)</i><br>
-						&#9679; <img src="images/CAFOTF2025.png" height="15" class="pop5"> 2025
+						&#9679; <img src="images/CAFOTF2025.png" height="5" class="pop5"> 2025
 						– 3<sup>rd</sup> Civil Aviation Flight and Operation Technology Forum, Chengdu, China 2025: <i>Human Factors in Civil Aviation Security</i>
 				</tr>
 				<tr>
@@ -1191,12 +1191,28 @@
 					<td>
 						&#9679; <img src="images/CAMT.png" height="15" class="pop5"> 
 						Verein der CDHAW-Absolventen und Mitglieder der Tongji-Universität, Düsseldorf, Germany 2018: <a href="https://www.cdhawer.com/meeting-news-2018/" target="_blank" rel="noopener noreferrer"><i>Academics and Art</i></a>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
+						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 
+						NOVA Universidade de Lisboa, Lisbon, Portugal 2018:v<i>Biosignals and Cognitive Systems</i><br>
+						&#9679; <img src="images/BremenAI.png" height="15" class="pop5">
+						– Bremen.AI Exhibition Symposium 2019: <i>Real-time Recognition and Mixed Reality</i><br>
+						&#9679; <img src="images/KonfuziusFrankfurt.jpg" height="15" class="pop5"> 
+						Lecture Series of the 3<sup>rd</sup> European University Theater Festival, Frankfurt, Germany 2019: <i>From Script to Stage</i><br>
 						&#9679; <a href="https://biostec.scitevents.org/?y=2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" height="12"></a> 
 						– 12<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Prague, Czech, 2019: <a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a> (Tutorial)<br>
+						&#9679; <img src="images/MindDay.png" height="15" class="pop5">
+						– MindDay Symposium on Cognitive Science, Bremen, Germany 2021: <i>Smart Knee Bandage</i><br>
 						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 
 						Karlsruher Institut für Technologie - KD<sup>2</sup>school Adaptive Systems Talks, Karlsruhe, Germany 2022: <i>Smart Knee Bandage</i> <img src="images/KD2School_Workshop.png" height="12" class="pop20"><br>
-						&#9679; <img src="images/Huadian2025.png" height="15" class="pop1">
-						– Huadian New Power System Technology Innovation Forum, Nanjing, China 2025: <i>Biosignals for the Safety of Power Operation and Mintenance Personnel</i>
+						&#9679; <img src="images/KonfuziusFrankfurt.jpg" height="15" class="pop5"> 
+						Lecture Series of the 6<sup>th</sup> European University Theater Festival, Frankfurt, Germany 2022:<i>The Stage Performance Art of Local Chinese Operas and Quyi</i><br>
+						&#9679; <img src="images/OJLAB.png" height="15" class="pop15"> 
+						Zhejiang Lab for Regenerative Medicine, Vision and Brain Health, Wenzhou, China 2024: <i>Multimodal Wearable Biosignal Sensors</i><br>
+						&#9679; <img src="images/BBDC2024.png" height="15" class="pop10">
+						– 9<sup>th</sup> Bremen Big Data Challenge (BBDC 2024) Award Ceremony Summit, Bremen, Germany 2024: <iWhat Else Can Physiological Signals Bring to Smart Life?</i><br>
+						&#9679; <img src="images/Huadian2025.png" height="15" class="pop2">
+						– Huadian New Power System Technology Innovation Forum, Nanjing, China 2025: <i>Biosignals for the Safety of Power Operation and Mintenance Personnel</i><br>
+						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 
+						NOVA Universidade de Lisboa, Lisbon, Portugal 2025: <i>HTML：Human-Triggered Machine Learning</i>
 				</tr>
 				<tr>
 					<td align="center">Open-Source Codebank, Dataset, and Tutorial Contributor</td>
