--- a/researchcn.html
+++ b/researchcn.html
@@ -1181,20 +1181,25 @@
 				<tr>
 					<td align="center">国际会议主旨报告</td>
 					<td>
-						&#9679; <a href="http://www.iccmid.org/speakers/" target="_blank" rel="noopener noreferrer"><img src="images/CMID.png" height="15" class="pop5"></a> 
-						– 第4届临床医学与智能设备国际研讨会，德国海德堡，2025：<i>穿戴式人工智能</i><br>
-						&#9679; <a href="https://www.artinhci.com/KeynoteSpeakers.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025
-						– 第3届人工智能和人机界面国际会议，中国南宁，2025<i>由人触发机器学习（HTML）</i><br>
-						&#9679; <img src="images/CAFOTF2025.png" height="15" class="pop5"> 2025
-						– 第3届民航飞行与运行技术论坛，中国成都，2025: <i>人因素和民航安全</i>
+						&#9679; <a href="http://www.iccmid.org/speakers/" target="_blank" rel="noopener noreferrer"><img src="images/CMID.png" height="15" class="pop5"></a> – 第4届临床医学与智能设备国际研讨会，德国海德堡，2025：<i>Wearable Medical AI</i><br>
+						&#9679; <a href="https://www.artinhci.com/KeynoteSpeakers.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 第3届人工智能和人机界面国际会议，中国南宁，2025<i>Human-Triggered Machine Learning (HTML)</i><br>
+						&#9679; <img src="images/CAFOTF2025.png" height="15" class="pop5"> 2025 – 第3届民航飞行与运行技术论坛，中国成都，2025: <i>人因素和民航安全</i>
 				</tr>
 				<tr>
-					<td align="center">国际学术会议邀请报告和艺术讲座</td>
+					<td align="center">会议、论坛、研讨会邀请报告和讲座</td>
 					<td>
 						&#9679; <img src="images/CAMT.png" height="15" class="pop5"> 同济大学中德工程学院，德国杜塞尔多夫，2018：<i>学术与艺术</i>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
+						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 新里斯本大学，葡萄牙里斯本，2018：<i>Biosignals and Cognitive Systems</i><br>
+						&#9679; <img src="images/BremenAI.png" height="15" class="pop5"> – Bremen.AI人工智能展览研讨会，德国不来梅，2019：<i>Real-time Recognition and Mixed Reality</i><br>
+						&#9679; <img src="images/KonfuziusFrankfurt.jpg" height="15" class="pop5"> 第3届法兰克福欧洲大学生戏剧节讲座单元，2019：<i>从剧本到舞台：业余表演爱好者自我训练</i><br>
 						&#9679; <a href="https://biostec.scitevents.org/?y=2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" height="12"></a> – 第12届国际生物医学工程系统和技术联合会议，捷克布拉格，2019：<a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a> (Tutorial)<br>
-						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 卡尔斯鲁厄理工学院KD<sup>2</sup>school适应性系统年度座谈会，德国卡尔斯鲁厄，2022：<i>智能膝盖绷带</i> <img src="images/KD2School_Workshop.png" height="12" class="pop20"><br>
-						&#9679; <img src="images/Huadian2025.png" height="15" class="pop1"> 中国华电新型电力系统技术创新论坛，中国南京，2025：<i>人因素和电力系统运维人员安全</i>
+						&#9679; <img src="images/MindDay.png" height="15" class="pop5"> – MindDay认知科学展览研讨会，德国不来梅，2021：<i>Smart Knee Bandage</i><br>
+						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 卡尔斯鲁厄理工学院KD<sup>2</sup>school适应性系统年度座谈会，德国卡尔斯鲁厄，2022：<i>Biosignal-Based Human Activity Recognition</i> <img src="images/KD2School_Workshop.png" height="12" class="pop20"><br>
+						&#9679; <img src="images/KonfuziusFrankfurt.jpg" height="15" class="pop5"> 第6届法兰克福欧洲大学生戏剧节讲座单元，2022：<i>中国地方戏曲和曲艺的舞台表演艺术</i><br>
+						&#9679; <img src="images/OJLAB.png" height="15" class="pop15	"> 再生调控与眼脑健康浙江省实验室（瓯江实验室），中国温州，2024：<i>Multimodal Wearable Biosignal Sensors</i><br>
+						&#9679; <img src="images/BBDC2024.png" height="15" class="pop10"> – 第9届不不来梅—北德大数据竞赛颁奖峰会，德国不来梅，2024：<iWhat Else Can Physiological Signals Bring to Smart Life?</i><br>
+						&#9679; <img src="images/Huadian2025.png" height="15" class="pop2">，中国南京，2025：<i>人因素和电力系统运维人员安全</i><br>
+						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 新里斯本大学，葡萄牙里斯本，2025：<i>HTML：Human-Triggered Machine Learning</i>
 				</tr>
 				<tr>
 				<td align="center">开源代码库、大数据和在线教程贡献者</td>
@@ -1224,7 +1229,7 @@
 						专业和学术协会成员
 					</td>
 					<td>
-						&#9679; 江苏省电工技术学会人工智能委员会会员</br>
+						&#9679; 江苏省电工技术学会人工智能专业委员会委员</br>
 						&#9679; 南京市欧美同学会会员
 					</td>
 				</tr>
